--- a/java/viacostaFX/pom.xml
+++ b/java/viacostaFX/pom.xml
@@ -79,13 +79,19 @@
             <version>3.1.0</version>
         </dependency>
 
-
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.30</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- JPA Spring-->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>3.1.3</version>
         </dependency>
 
     </dependencies>
